// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard edebe de mostrar el componente correctamente  1`] = `
<div
  className="productCard undefined "
>
  <h1>
    Prueba de renderizado
  </h1>
</div>
`;

exports[`ProductCard should incrementar el contador 1`] = `
<div
  className="productCard undefined "
>
  <h1>
    Prueba de renderizado
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;
